@@ -177,11 +177,11 @@ xmlns:xs="http://www.w3.org/2001/XMLSchema" version="3.18">
               <xs:element name="autotype" type="stringType" minOccurs="0" maxOccurs="1" />
               <xs:element name="notes" type="stringType" minOccurs="0" maxOccurs="1" />
               <xs:element name="uuid" type="uuidType" minOccurs="0" maxOccurs="1" />
-              <xs:element ref="typeCtime" minOccurs="0" maxOccurs="1" />
-              <xs:element ref="typeAtime" minOccurs="0" maxOccurs="1" />
-              <xs:element ref="typeXtime" minOccurs="0" maxOccurs="1" />
-              <xs:element ref="typePMtime" minOccurs="0" maxOccurs="1" />
-              <xs:element ref="typeRMtime" minOccurs="0" maxOccurs="1" />
+              <xs:element name="ctimex" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
+              <xs:element name="atimex" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
+              <xs:element name="xtimex" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
+              <xs:element name="pmtimex" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
+              <xs:element name="rmtimex" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
               <xs:element name="xtime_interval" type="expirydaysType" minOccurs="0" maxOccurs="1" />
               <xs:element name="pwhistory" minOccurs="0" maxOccurs="1">
               <!-- Start Password History Fields -->
@@ -196,7 +196,7 @@ xmlns:xs="http://www.w3.org/2001/XMLSchema" version="3.18">
                           <xs:element name="history_entry" minOccurs="0" maxOccurs="255">
                             <xs:complexType>
                               <xs:all>
-                                <xs:element ref="typePWChanged" minOccurs="1" maxOccurs="1" />
+                                <xs:element name="changedx" type="xs:dateTime" minOccurs="0" maxOccurs="1" />
                                 <xs:element name="oldpassword" type="stringType" minOccurs="1" maxOccurs="1" />
                               </xs:all>
                               <xs:attribute name="num" type="xs:int" use="optional" />
@@ -255,28 +255,5 @@ xmlns:xs="http://www.w3.org/2001/XMLSchema" version="3.18">
     </xs:complexType>
   <!-- End Database -->
   </xs:element>
-
-  <!-- Since cannot have xs:choice within a xs:all section - do it this way.
-       Once the old fields are obsolete, we ca just have the new fields in
-       place of the 'ref' entries above. -->
-  <xs:element name="typeCtime" abstract="true" />
-  <xs:element name="ctime" type="datetimestampType" substitutionGroup="typeCtime" />
-  <xs:element name="ctimex" type="xs:dateTime"  substitutionGroup="typeCtime" />
-  <xs:element name="typeAtime" abstract="true" />
-  <xs:element name="atime" type="datetimestampType" substitutionGroup="typeAtime" />
-  <xs:element name="atimex" type="xs:dateTime"  substitutionGroup="typeAtime" />
-  <xs:element name="typeXtime" abstract="true" />
-  <xs:element name="ltime" type="datetimestampType" substitutionGroup="typeXtime" />
-  <xs:element name="xtime" type="datetimestampType" substitutionGroup="typeXtime" />
-  <xs:element name="xtimex" type="xs:dateTime"  substitutionGroup="typeXtime" />
-  <xs:element name="typePMtime" abstract="true" />
-  <xs:element name="pmtime" type="datetimestampType" substitutionGroup="typePMtime" />
-  <xs:element name="pmtimex" type="xs:dateTime"  substitutionGroup="typePMtime" />
-  <xs:element name="typeRMtime" abstract="true" />
-  <xs:element name="rmtime" type="datetimestampType" substitutionGroup="typeRMtime" />
-  <xs:element name="rmtimex" type="xs:dateTime"  substitutionGroup="typeRMtime" />
-  <xs:element name="typePWChanged" abstract="true" />
-  <xs:element name="changed" type="datetimestampType" substitutionGroup="typePWChanged" />
-  <xs:element name="changedx" type="xs:dateTime"  substitutionGroup="typePWChanged" />
 </xs:schema>
 <!-- End of proper Password Safe validation XSD -->
